@@ -27,6 +27,10 @@ Changes
 Fixes
 =====
 
+ - Fixed a NullPointerException which could occur if an attempt was made to use
+   `match` on two different relations within an explicit join condition.
+   This now raises a proper error stating that it's not supported.
+
  - Wrong results were returned from queries with more than one level
    of nested subselects.
 
